--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
     <title>Formateo de números</title>
 	<script type="text/javascript" src="./js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="./js/currencyFormatter.js"></script>
+	<script type="text/javascript" src="./js/currencyFormatter.min.js"></script>
 </head>
 <body>
 <h1>CurrencyFormatter.js</h1>
