--- a/example.html
+++ b/example.html
@@ -22,7 +22,7 @@
 			<td class="num">25</td>
             <td class="numFr">25</td>
 			<td class="numDe">25</td>
-			<td class="numEn">25</td>
+			<td class="numUk">25</td>
             <td class="numIt">25</td>
 		</tr>		
 		<tr>
@@ -30,7 +30,7 @@
 			<td class="num">215.50</td>
             <td class="numFr">215.50</td>
 			<td class="numDe">215.50</td>
-			<td class="numEn">215.50</td>
+			<td class="numUk">215.50</td>
             <td class="numIt">215.50</td>
 		</tr>
 		<tr>
@@ -38,7 +38,7 @@
 			<td class="num">1 259.74</td>
             <td class="numFr">1 259.74</td>
 			<td class="numDe">1 259.74</td>
-			<td class="numEn">1 259.74</td>
+			<td class="numUk">1 259.74</td>
             <td class="numIt">1 259.74</td>
 		</tr>
 		<tr>
@@ -46,7 +46,7 @@
 			<td class="num">1,874.56</td>
             <td class="numFr">1,874.56</td>
 			<td class="numDe">1,874.56</td>
-			<td class="numEn">1,874.56</td>
+			<td class="numUk">1,874.56</td>
             <td class="numIt">1,874.56</td>
 		</tr>
 		<tr>
@@ -54,7 +54,7 @@
 			<td class="num">54871254.36</td>
             <td class="numFr">54871254.36</td>
 			<td class="numDe">54871254.36</td>
-			<td class="numEn">54871254.36</td>
+			<td class="numUk">54871254.36</td>
             <td class="numIt">54871254.36</td>
 		</tr>
 		<tr>
@@ -62,7 +62,7 @@
 			<td class="num">25,85</td>
             <td class="numFr">25,85</td>
 			<td class="numDe">25,85</td>
-			<td class="numEn">25,85</td>
+			<td class="numUk">25,85</td>
             <td class="numIt">25,85</td>
 		</tr>
 		<tr>
@@ -70,7 +70,7 @@
 			<td class="num">1.523,56</td>
             <td class="numFr">1.523,56</td>
 			<td class="numDe">1.523,56</td>
-			<td class="numEn">1.523,56</td>
+			<td class="numUk">1.523,56</td>
             <td class="numIt">1.523,56</td>
 		</tr>
         <tr>
@@ -78,7 +78,7 @@
             <td class="num">16.256.523,56</td>
             <td class="numFr">16.256.523,56</td>
             <td class="numDe">16.256.523,56</td>
-            <td class="numEn">16.256.523,56</td>
+            <td class="numUk">16.256.523,56</td>
             <td class="numIt">16.256.523,56</td>
         </tr>
 	</table>
@@ -86,62 +86,42 @@
     <p>Input text a formato español: <input class="num" type="text" value="16.256.523,56"/></p>
     <p>Input text a formato francés: <input class="numFr" type="text" value="16.256.523,56"/></p>
     <p>Input text a formato alemán: <input class="numDe" type="text" value="16.256.523,56"/></p>
-    <p>Input text a formato inglés: <input class="numEn" type="text" value="16.256.523,56"/></p>
+    <p>Input text a formato inglés: <input class="numUk" type="text" value="16.256.523,56"/></p>
     <p>Input text a formato italiano: <input class="numIt" type="text" value="16.256.523,56"/></p>
 <h2>Contenido de un span formateado y con mostrado de símbolo</h2>
-<p>Formato español: <span class="curEs">102547.56</span></p>
-<p>Formato francés: <span class="curFr">102547.56</span></p>
-<p>Formato inglés: <span class="curEn">102547.56</span></p>
-<p>Formato aleman: <span class="curDe">102547.56</span></p>
-<p>Formato italiano: <span class="curIt">102547.56</span></p>
+<p>Formato español: <span id="curEs">102547.56</span></p>
+<p>Formato francés: <span id="curFr">102547.56</span></p>
+<p>Formato inglés: <span id="curUk">102547.56</span></p>
+<p>Formato aleman: <span id="curDe">102547.56</span></p>
+<p>Formato italiano: <span id="curIt">102547.56</span></p>
 	<script>
 		$(document).ready(function(){
-            $('.num').each(function(){
-                $(this).currencyFormatter({lang: 'es'});
-            });
-            $('.numFr').each(function(){
-                $(this).currencyFormatter({lang: 'fr'});
-            });
-            $('.numDe').each(function(){
-                $(this).currencyFormatter({lang: 'de'});
-            });
-            $('.numEn').each(function(){
-                $(this).currencyFormatter({lang: 'en'});
-            });
-            $('.numIt').each(function(){
-                $(this).currencyFormatter({lang: 'it'});
-            });
+            $('.num').currencyFormatter({lang: 'es'});
+            $('.numFr').currencyFormatter({lang: 'fr'});
+            $('.numDe').currencyFormatter({lang: 'de'});
+            $('.numUk').currencyFormatter({lang: 'uk'});
+            $('.numIt').currencyFormatter({lang: 'it'});
 
-            $('.curEs').each(function(){
-                $(this).currencyFormatter({
+            $('#curEs').currencyFormatter({
                     lang: 'es',
                     showCurrency: true
                 });
-            });
-            $('.curFr').each(function(){
-                $(this).currencyFormatter({
+            $('#curFr').currencyFormatter({
                     lang: 'fr',
                     showCurrency: true
                 });
-            });
-            $('.curDe').each(function(){
-                $(this).currencyFormatter({
+            $('#curDe').currencyFormatter({
                     lang: 'de',
                     showCurrency: true
                 });
-            });
-            $('.curEn').each(function(){
-                $(this).currencyFormatter({
-                    lang: 'en',
+            $('#curUk').currencyFormatter({
+                    lang: 'uk',
                     showCurrency: true
                 });
-            });
-            $('.curIt').each(function(){
-                $(this).currencyFormatter({
+            $('#curIt').currencyFormatter({
                     lang: 'it',
                     showCurrency: true
                 });
-            });
         });
 	</script>
 </body>
